uopdated css to add colour, and fixed spacing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
     width: 900px;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
     border-radius: 4px;
     padding: 20px;
     background: #fff;
