--- a/src/app/components/results/results.component.css
+++ b/src/app/components/results/results.component.css
@@ -2,4 +2,5 @@
     font-size: 30px;
     font-weight: bolder;
     color: olivedrab;
+    width: 100px;
 }
